--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
     "functions": {
-      "api/*.php": {
-        "runtime": "vercel-php@0.6.0"
+      "api/index.php": {
+        "runtime": "vercel-php@0.5.2"
       }
-    },
-    "routes": [
-      { "src": "/(.*)",  "dest": "/index.php" }
-    ]
+    }
   }
