--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-    "functions": {
-      "api/index.php": {
-        "runtime": "vercel-php@0.5.2"
-      }
-    }
+    "version": 2,
+    "builds": [{ "src": "api/index.php", "use": "vercel-php@0.6.0" }]
   }
