--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
-    "version": 2,
-    "builds": [{ "src": "api/index.php", "use": "vercel-php@0.6.0" }]
+    "functions": {
+      "api/**/*.php": {
+        "runtime": "vercel-php@0.4.0"
+      }
+    }
   }
