--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-    "functions": {
-      "api/**/*.php": {
-        "runtime": "vercel-php@0.4.0"
+    "version": 2,
+    "builds": [
+      {
+        "src": "index.php",
+        "use": "@vercel/php"
       }
-    }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "index.php"
+      }
+    ]
   }
-  
