--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,7 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "index.php",
-        "use": "@vercel/php"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "index.php"
-      }
+      { "src": "index.php", "use": "vercel-php@0.6.0" },
+      { "src": "user.php", "use": "vercel-php@0.6.0" }
     ]
   }
