--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "functions": {},
+  "functions": {
+    "dummy": {
+      "runtime": "dummy"
+    }
+  },
   "rewrites": [
     { "source": "/(.*)", "destination": "/$1" }
   ]
